# Trading-Engine

./: .gitignore  Baseline_Aug_7.txt  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  main.cpp  order.h  order_book.cpp  order_book.h  test.cpp  test_orderbook.cpp  trade.h
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/api/: http_server.cpp  http_server.h  trading_api.cpp  trading_api.h
backend/src/order_book/: order_book.h
backend/src/utils/: json_utils.cpp  json_utils.h
backend/src/websocket/: websocket_server.cpp  websocket_server.h
backend/tests/: benchmark.cpp
docs/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/OrderBook/: OrderBook.tsx  OrderBookTable.tsx  OrderBookTradeSummary.tsx
frontend/src/components/OrderForm/: OrderForm.tsx
frontend/src/components/TradeHistory/: TradeHistory.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/types/: order.ts  trade.ts
scripts/: build.sh  start.sh
